# beam

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  pr.yml  release.yml
src/: App.tsx  main.rs  protocol.rs  styles.css
src-tauri/: AndroidManifest.partial.xml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: beam.rs  lib.rs  main.rs  saver.rs
src/components/: QrScannerModal.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  progress.tsx
src/lib/: transport-desktop.ts  transport.ts
