[package]
name = "knockknock"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
iroh = "0.98"
n0-future = "0.3"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
