[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[workspace.dependencies]
atman = { git = "https://github.com/atman-project/atman.git", tag = "v0.0.1", default-features = false, features = [
  "blobs",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local-dev override: iterate against the working tree at ~/repos/atman
# instead of the published git ref. Remove (or comment out) before pushing.
# [patch."https://github.com/atman-project/atman.git"]
# atman = { path = "../atman/atman" }
