[package]
name = "beam"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Beam — peer-to-peer file sharing via iroh"

# Explicit bin name so the binary cargo produces — and the title macOS
# reads in its menu bar / Dock during `tauri dev` — is `Beam`, while the
# crate keeps the conventional lowercase package name.
[[bin]]
name = "Beam"
path = "src/main.rs"

[lib]
name = "beam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atman.workspace = true
anyhow.workspace = true
getrandom = "0.3"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url = "2"

# iroh 0.94 (in atman 0.0.1) pins `ed25519-dalek = "=3.0.0-pre.1"`,
# a pre-release that was never updated for the breaking changes that
# landed in `ed25519`, `pkcs8`, and `der` when they cut their final
# 0.x releases. We're unused consumers of those crates, but listing
# them here with `=` versions forces cargo to resolve them at the rc
# revisions `ed25519-dalek 3.0.0-pre.1` actually compiles against.
#
# TODO: Move this to atman, so every consumer of atman can benefit from it.
# TODO: Drop the pins once iroh ships a release that bumps `ed25519-dalek`.
ed25519 = "=3.0.0-rc.1"
pkcs8 = "=0.11.0-rc.7"
der = "=0.8.0-rc.9"

# These three are dep-resolver pins only; we never `use` them.
[package.metadata.cargo-machete]
ignored = ["ed25519", "pkcs8", "der"]
