[package]
name = "beam"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Beam — peer-to-peer file sharing via iroh"

# Explicit bin name so the binary cargo produces — and the title macOS
# reads in its menu bar / Dock during `tauri dev` — is `Beam`, while the
# crate keeps the conventional lowercase package name.
[[bin]]
name = "Beam"
path = "src/main.rs"

[lib]
name = "beam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atman.workspace = true
anyhow.workspace = true
getrandom = "0.3"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url = "2"
